adding tests and other stuff

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,5 +12,6 @@
 <body>
 {% block body %}{% endblock %}
 {% block javascripts %}{% endblock %}
+{{ render_hinclude(controller('MainBundle:Hello:_latestTweets')) }}
 </body>
 </html>
